<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_story.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_main"
                style="@style/Theme.StoryApp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorSurface"
                app:titleTextColor="?attr/colorOnSurface" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            android:text="@string/upload_photo_story"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintBottom_toTopOf="@id/iv_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_main_container" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:alpha="0"
            android:contentDescription="@string/photo_story"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_preview"
            app:srcCompat="@drawable/placeholder" />

        <Button
            android:id="@+id/button_camera"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:alpha="0"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/upload_camera"
            app:icon="@drawable/ic_camera_24"
            app:layout_constraintEnd_toStartOf="@id/button_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_preview" />

        <Button
            android:id="@+id/button_gallery"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:alpha="0"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/upload_gallery"
            app:icon="@drawable/ic_gallery_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_camera"
            app:layout_constraintTop_toBottomOf="@id/iv_preview" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:alpha="0"
            android:checked="false"
            android:text="@string/show_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_gallery" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:hint="@string/description"
            app:errorEnabled="true"
            app:helperText="@string/supporting_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_location"
            app:startIconContentDescription="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="top|start"
                android:inputType="text|textMultiLine"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_description" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>