<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_maps"
        android:title="@string/maps"
        android:icon="@drawable/ic_maps_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_setting_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>